--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="#" class="logo">
+            <img src="./img/logo.png" alt="Logo">
+            Lizard
+        </a>
+    </nav>
 </body>
 </html>
