--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <a href="#" class="logo">
-            <img src="./img/logo.png" alt="Logo">
-            Lizard
-        </a>
+        <a href="#" class="logo">Lizard</a>
+
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+        </ul>
     </nav>
+    
+    <div class="bg"></div>
+    <p class="title">I am <span class="type">Web Developer</span></p>
+
+    <script src="./app.js"></script>
 </body>
 </html>
