--- a/index.html
+++ b/index.html
@@ -4,23 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <a href="#" class="logo">Lizard</a>
+        <a href="#" class="logo">LIZARD</a>
+
+        <button class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </button>
 
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="#"><i class="bx bxs-home"></i> HOME</a></li>
+            <li><a href="#"><i class="bx bxs-user"></i> ABOUT</a></li>
+            <li><a href="#"><i class="bx bxs-book-content"></i> PORTFOLIO</a></li>
         </ul>
     </nav>
     
     <div class="bg"></div>
     <p class="title">I am <span class="type">Web Developer</span></p>
+
+    <footer>
+        <p class="copyright"><i class="bx bx-copyright"></i> Copyright <strong>lizardofc.github.io</strong></p>
+    </footer>
 
     <script src="./app.js"></script>
 </body>
