--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="#" class="logo">LIZARD</a>
+        <a href="./index.html" class="logo">LIZARD</a>
 
         <button class="burger">
             <div class="line1"></div>
@@ -19,9 +19,9 @@
         </button>
 
         <ul class="nav-links">
-            <li><a href="./index.html"><i class="bx bxs-home"></i> HOME</a></li>
-            <li><a href="./about.html"><i class="bx bxs-user"></i> ABOUT</a></li>
-            <li><a href="./portfolio.html"><i class="bx bxs-book-content"></i> PORTFOLIO</a></li>
+            <li><a href="./index.html"><i class="bx bxs-home"></i> Home</a></li>
+            <li><a href="./about.html"><i class="bx bxs-user"></i> About</a></li>
+            <li><a href="./projects.html"><i class="bx bxs-book-content"></i> Projects</a></li>
         </ul>
     </nav>
     
@@ -92,6 +92,6 @@
         <p class="copyright"><i class="bx bx-copyright"></i> Copyright <strong>lizardofc.ga</strong></p>
     </footer>
 
-    <script src="./app.js"></script>
+    <script src="./js/nav.js"></script>
 </body>
 </html>
