--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lizard - Home</title>
+    <title>Lizard - About</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap">
     <link rel="stylesheet" href="style.css">
@@ -25,14 +25,27 @@
         </ul>
     </nav>
     
-    <div class="bg"></div>
-    <p class="title">Welcome!<br> I am <span class="type">Web Developer</span></p>
+    <div class="bg bg-dark"></div>
+    <div class="projects">
+        <a class="project" href="#">
+            <div class="img" style="background: url('./img/test.jpg');"></div>
+            <p>Test Website</p>
+        </a>
+        <a class="project" href="#">
+            <div class="img" style="background: url('./img/test.jpg');"></div>
+            <p>Test Website</p>
+        </a>
+        <a class="project" href="#">
+            <div class="img" style="background: url('./img/test.jpg');"></div>
+            <p>Test Website</p>
+        </a>
+    </div>
 
     <footer>
         <p class="copyright"><i class="bx bx-copyright"></i> Copyright <strong>lizardofc.ga</strong></p>
     </footer>
 
-    <script src="./js/main.js"></script>
     <script src="./js/nav.js"></script>
-</body> 
+    <script src="./js/projects.js"></script>
+</body>
 </html>
