Update 5 - Social Icons, Etc.

--- a/projects.html
+++ b/projects.html
@@ -27,22 +27,22 @@
     
     <div class="bg bg-dark"></div>
     <div class="projects">
-        <a class="project" href="#">
+        <p style="color: #F22B29;">There is no content.</p>
+        <!--<a class="project" href="#">
             <div class="img" style="background: url('./img/test.jpg');"></div>
             <p>Test Website</p>
-        </a>
-        <a class="project" href="#">
-            <div class="img" style="background: url('./img/test.jpg');"></div>
-            <p>Test Website</p>
-        </a>
-        <a class="project" href="#">
-            <div class="img" style="background: url('./img/test.jpg');"></div>
-            <p>Test Website</p>
-        </a>
+        </a>-->
     </div>
 
     <footer>
         <p class="copyright"><i class="bx bx-copyright"></i> Copyright <strong>lizardofc.ga</strong></p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/giorgix27"><i class="bx bxl-facebook"></i></a>
+            <a href="https://twitter.com/lizard_ofc"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.instagram.com/bazerashvili_g/"><i class="bx bxl-instagram-alt"></i></a>
+            <a href="https://www.youtube.com/channel/UCrYl5_h6G9G1bMvzjJnHaOQ"><i class="bx bxl-youtube"></i></a>
+            <a href="https://github.com/lizardofc"><i class="bx bxl-github"></i></a>
+        </div>
     </footer>
 
     <script src="./js/nav.js"></script>
