--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     
     <div class="bg bg-dark"></div>
     <div class="projects">
-        <p style="color: #F22B29;">There is no content.</p>
+        <p style="color: #F22B29;">This section is empty.</p>
         <!--<a class="project" href="#">
             <div class="img" style="background: url('./img/test.jpg');"></div>
             <p>Test Website</p>
