Added dotcss to Projects

--- a/projects.html
+++ b/projects.html
@@ -27,11 +27,11 @@
     
     <div class="bg bg-dark"></div>
     <div class="projects">
-        <p style="color: #F22B29;">This section is empty.</p>
-        <!--<a class="project" href="#">
-            <div class="img" style="background: url('./img/test.jpg');"></div>
-            <p>Test Website</p>
-        </a>-->
+        <!--<p style="color: #F22B29;">This section is empty.</p>-->
+        <a class="project dotcss" href="./dotcss">
+            <div class="img">.css</div>
+            <p>dotcss</p>
+        </a>
     </div>
 
     <footer>
