added contact form (not responsive yet)

--- a/index.html
+++ b/index.html
@@ -48,13 +48,22 @@
     </section>
     <section class="container border contact">
         <h1>Contact me</h1>
-        <ul class="links">
-            <li><a href="https://facebook.com/gbazeraa" target="_blank"><i class='bx bxl-facebook'></i> გიორგი ბაზერაშვილი</a></li>
-            <li><a href="https://twitter.com/gbazeraa" target="_blank"><i class='bx bxl-twitter'></i> @gbazeraa</a></li>
-            <li><a href="https://github.com/gbazera" target="_blank"><i class='bx bxl-github'></i> gbazera</a></li>
-            <li><a href="mailto:bazerashvili.gio27@gmail.com" target="_blank"><i class='bx bxs-envelope'></i> bazerashvili.gio27@gmail.com</a></li>
-            <li><a href="tel:+995574147355" target="_blank"><i class='bx bxs-phone'></i> +995 574-14-73-55</a></li>
-        </ul>
+        <div class="flex">
+            <form class="contact-form">
+                <label for="contact-email">Email:</label>
+                <input class="border" type="email" name="contact-email">
+                <label for="contact-message">Message:</label>
+                <textarea class="border" name="contact-message"></textarea>
+                <button class="btn border" name="contact-submit" type="submit">SEND</button>
+            </form>
+            <ul class="links">
+                <li><a href="https://facebook.com/gbazeraa" target="_blank"><i class='bx bxl-facebook'></i> გიორგი ბაზერაშვილი</a></li>
+                <li><a href="https://twitter.com/gbazeraa" target="_blank"><i class='bx bxl-twitter'></i> @gbazeraa</a></li>
+                <li><a href="https://github.com/gbazera" target="_blank"><i class='bx bxl-github'></i> gbazera</a></li>
+                <li><a href="mailto:bazerashvili.gio27@gmail.com" target="_blank"><i class='bx bxs-envelope'></i> bazerashvili.gio27@gmail.com</a></li>
+                <li><a href="tel:+995574147355" target="_blank"><i class='bx bxs-phone'></i> +995 574-14-73-55</a></li>
+            </ul>
+        </div>
     </section>
     <div class="overlay"></div>
     <script src="script.js"></script>
